<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:srcCompat="@drawable/logon" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="384dp"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:text="@string/titulo"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="264dp"
                android:text="@string/mensaje"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:text="@string/mensaje2"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <Button
                android:id="@+id/boton_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:onClick="promFinal"
                android:text="@string/botonfinal"
                android:textColor="@android:color/background_light" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
