<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.71"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorPrimaryDark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="248dp">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="40dp"
                android:layout_weight="0.71">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="153dp"
                    android:layout_height="150dp"
                    android:layout_weight="0.71"
                    app:srcCompat="@drawable/mujer" />

                <LinearLayout
                    android:layout_width="234dp"
                    android:layout_height="148dp"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="242dp"
                        android:layout_height="50dp"
                        android:text="@string/about_t"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="63dp"
                        android:layout_weight="0.50"
                        android:gravity="center"
                        android:text="Diana Castrillón"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                </LinearLayout>

            </GridLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:onClick="inicio"
            android:text="@string/botonabout"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

</LinearLayout>
