<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="182dp">

                <TextView
                    android:id="@+id/finalp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display4" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt_n1"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:layout_weight="0.28"
                    android:gravity="right"
                    android:text="@string/nota1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <EditText
                    android:id="@+id/notap1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:ems="10"
                    android:gravity="left"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt_n2"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:layout_weight="0.31"
                    android:gravity="right"
                    android:text="@string/nota2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <EditText
                    android:id="@+id/notap2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:layout_weight="0.04"
                    android:ems="10"
                    android:gravity="left"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt_n3"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:layout_weight="0.31"
                    android:gravity="right"
                    android:text="@string/nota3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <EditText
                    android:id="@+id/notap3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:layout_weight="0.04"
                    android:ems="10"
                    android:gravity="left"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/about1"
                    android:layout_width="158dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:onClick="about1"
                    android:text="@string/botonabout"
                    android:textColor="@android:color/background_light" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
